--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -1,4 +1,4 @@
-streamify:
+spotify_project:
   outputs:
     dev:
       dataset: streamify_stg
@@ -11,8 +11,9 @@ streamify:
       threads: 4
       timeout_seconds: 300
       type: bigquery
+
     prod:
-      dataset: streamify_prod
+      dataset: streamify_stg
       fixed_retries: 1
       keyfile: /.google/credentials/google_credentials.json
       location: us-central1
@@ -22,4 +23,5 @@ streamify:
       threads: 4
       timeout_seconds: 300
       type: bigquery
+      
   target: dev
