--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,43 +1,34 @@
-# First-time build can take up to 10 mins.
-FROM apache/airflow:2.7.3
+# Base image
+FROM apache/airflow:2.9.1
 
+# Environment variables
 ENV AIRFLOW_HOME=/opt/airflow
 
 # Install necessary system packages
 USER root
 RUN apt-get update && \
-    ACCEPT_EULA=Y apt-get upgrade -y && \
-    apt-get install -y git
+    apt-get upgrade -y && \
+    apt-get install -y git apt-transport-https ca-certificates gnupg
 
+# Add the Cloud SDK distribution URI as a package source
+RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
 
-# Switch back to airflow user to install Python packages
+# Import the Google Cloud Platform public key
+RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+
+# Update and install the Google Cloud SDK
+RUN apt-get update && apt-get install -y google-cloud-sdk
+
+# Switch to airflow user and upgrade pip
 USER ${AIRFLOW_UID:-50000}
 RUN pip install --upgrade pip
-# Install Python packages from requirements.txt
+
+# Copy and install Python packages from requirements.txt
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Install Google Cloud SDK
-USER root
-ARG CLOUD_SDK_VERSION=322.0.0
-ENV GCLOUD_HOME=/home/google-cloud-sdk
-ENV PATH="${GCLOUD_HOME}/bin/:${PATH}"
-
-RUN DOWNLOAD_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${CLOUD_SDK_VERSION}-linux-x86_64.tar.gz" \
-    && TMP_DIR="$(mktemp -d)" \
-    && curl -fL "${DOWNLOAD_URL}" --output "${TMP_DIR}/google-cloud-sdk.tar.gz" \
-    && mkdir -p "${GCLOUD_HOME}" \
-    && tar xzf "${TMP_DIR}/google-cloud-sdk.tar.gz" -C "${GCLOUD_HOME}" --strip-components=1 \
-    && "${GCLOUD_HOME}/install.sh" \
-       --bash-completion=false \
-       --path-update=false \
-       --usage-reporting=false \
-       --quiet \
-    && rm -rf "${TMP_DIR}" \
-    && gcloud --version
 
 # Set the working directory
 WORKDIR $AIRFLOW_HOME
 
-# Switch back to airflow user
-USER ${AIRFLOW_UID:-50000}
+# Verify the installation
+RUN gcloud --version
